# curso_python

./: .pre-commit-config.yaml  .project  git_update.py
advanced_level/arquitectura_limpia/: pyproject.toml
advanced_level/arquitectura_limpia/src/app/: main.py
advanced_level/arquitectura_limpia/src/app/DTO/: OrderDTO.py
advanced_level/arquitectura_limpia/src/app/adaptador/: InMemoryOrderRepository.py  __init__.py
advanced_level/arquitectura_limpia/src/app/casos_de_uso/: CreateOrderUseCase.py  __init__.py
advanced_level/arquitectura_limpia/src/app/core/: security.py
advanced_level/arquitectura_limpia/src/app/gateway/: SQL_user_repository.py  __init__.py  memory_user_repository.py  user_repository.py
advanced_level/arquitectura_limpia/src/app/presenters/: OrderPresenter.py  __init__.py
advanced_level/arquitectura_limpia/src/test/: test_create_order.py
advanced_level/proyecto_final/: .coverage  Dockerfile  README.md  pyproject.toml  requirements.txt  test.db
advanced_level/proyecto_final/src/app/: __main__.py  config.py  main.py
advanced_level/proyecto_final/src/app/aplication/services/: order_service.py
advanced_level/proyecto_final/src/app/domain/entities/: order.py
advanced_level/proyecto_final/src/app/domain/repository/: order_repository.py
advanced_level/proyecto_final/src/app/domain/value_objects/: __init__.py  money.py  product_name.py  quantity.py
advanced_level/proyecto_final/src/app/infraestructure/db/: db.py  init_db.py  session.py
advanced_level/proyecto_final/src/app/infraestructure/mapping/: order_mapper.py
advanced_level/proyecto_final/src/app/infraestructure/models/: order_model.py
advanced_level/proyecto_final/src/app/infraestructure/repositories/: in_memory_repository.py  sql_order_repository.py
advanced_level/proyecto_final/src/app/infraestructure/request/: order_request.py
advanced_level/proyecto_final/src/app/infraestructure/response/: order_response.py
advanced_level/proyecto_final/src/app/infraestructure/routers/: auth_router.py  order_routers.py
advanced_level/proyecto_final/src/test/aplication/services/: order_service_test.py
advanced_level/proyecto_final/src/test/domain/value_objects/: money_test.py  product_name_test.py  quantity_test.py
advanced_level/proyecto_final/src/test/infraestructure/routers/: order_router_test.py
advanced_level/security/: .env  pyproject.toml  test.db
advanced_level/security/src/app/: config.py
advanced_level/security/src/app/adaptador/: SQLAlchemyOrderRepository.py  sql_alchemy_uow.py
advanced_level/security/src/app/db/: session.py
advanced_level/security/src/app/domain/: __init__.py
advanced_level/security/src/app/models/: Order.py  __init__.py
advanced_level/security/src/app/puerto/: UnitOfWork.py  __init__.py
advanced_level/security/src/app/routers/: order.py
advanced_level/security/src/test/: conftest.py
fundamental_level/entorno_herramientas/: .pre-commit-config.yaml  pyproject.toml
fundamental_level/entorno_herramientas/src/entorno_herramientas/: main.py
fundamental_level/fundamentos_lenguage/: pyproject.toml
fundamental_level/fundamentos_lenguage/src/fundamentos_lenguage/: __main__.py
fundamental_level/fundamentos_lenguage/src/fundamentos_lenguage/constants/: constants.py
fundamental_level/fundamentos_lenguage/src/fundamentos_lenguage/models/: data.json  data_error.json
fundamental_level/fundamentos_lenguage/src/fundamentos_lenguage/services/: service_json.py
fundamental_level/http_api/: pyproject.toml
fundamental_level/http_api/src/http_api/: __main__.py
fundamental_level/http_api/src/http_api/classes/: DogResponse.py
fundamental_level/http_api/src/http_api/service/: consume.py
fundamental_level/http_api/src/http_api/utils/: constants.py
fundamental_level/libreria/: pyproject.toml
fundamental_level/libreria/src/libreria/: __main__.py
fundamental_level/libreria/src/libreria/clases/: Order.py
fundamental_level/libreria/src/libreria/input/: order.csv
fundamental_level/libreria/src/libreria/model/: OrderIn.py  outputModel.py
fundamental_level/libreria/src/libreria/output/: output.json
fundamental_level/libreria/src/libreria/service/: service.py
fundamental_level/objetos_modelos/lab1/: pyproject.toml
fundamental_level/objetos_modelos/lab1/objetos_modelos/: __main__.py
fundamental_level/objetos_modelos/lab2/: pyproject.toml
fundamental_level/objetos_modelos/lab2/src/objetos_modelos_2/: __main__.py
fundamental_level/objetos_modelos/lab2/src/objetos_modelos_2/clases/: Order.py
fundamental_level/objetos_modelos/lab2/src/objetos_modelos_2/models/: OrderIn.py  OrderOut.py
fundamental_level/objetos_modelos/lab2/src/objetos_modelos_2/services/: transform_input_to_otuput_service.py
fundamental_level/objetos_modelos/lab2/src/objetos_modelos_2/utils/: data.json
fundamental_level/pythonic/: pyproject.toml
fundamental_level/pythonic/src/pythonic/: __main__.py
fundamental_level/pythonic/src/pythonic/service/: process_service.py  (+1 more)
intermediate_level/SOLID/: pyproject.toml
intermediate_level/SOLID/src/app/: main.py
intermediate_level/SOLID/src/test/: user_service_test.py
intermediate_level/arquitectura/src/test/: contract_test.py
intermediate_level/bd_orm/: .pre-commit-config.yaml  pyproject.toml  test.db
intermediate_level/bd_orm/src/app/: __main__.py
intermediate_level/bd_orm/src/app/config/: db.py
intermediate_level/bd_orm/src/app/service/: consumeDB.py
intermediate_level/bd_orm/src/app/utils/: constants.py
intermediate_level/ciencia_datos/: model.pkl  pyproject.toml
intermediate_level/ciencia_datos/src/app/: data.csv  predict.py  train.py
intermediate_level/concurrencia/: pyproject.toml
intermediate_level/concurrencia/src/app/: __main__.py  cpuBond.py  httpxClient.py  syncClient.py
intermediate_level/fast_api/: pyproject.toml
intermediate_level/fast_api/src/app/: main.py
intermediate_level/pytest/: .coverage  pyproject.toml
intermediate_level/pytest/src/app/: __init__.py  carrito.py
intermediate_level/pytest/src/test/: test_carrito.py
(+51 files in other folders)
