[project]
name = "fundamentos-lenguage"
version = "0.1.0"
description = ""
authors = [
    {name = "YaronEsquivel",email = "yaron.esquivel@axity.com"}
]
requires-python = ">=3.12"
dependencies = [
    "black (>=26.3.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "ruff (>=0.15.9,<0.16.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "mypy (>=1.20.0,<2.0.0)",
    "types-aiofiles (>=25.1.0.20260409,<26.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true