[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "YaronEsquivel",email = "yaron.esquivel@axity.com"}
]
requires-python = ">=3.12"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "requests (>=2.33.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
